[+] get user's info started to develop logic
