# internal/account/model/dto.go
@@ -1,0 +1,4 @@
+package model
+
+type GetCommonInfoResponse struct {
+}
